[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datapatch"
version = "1.2.3"
description = "A library for defining rule-based overrides on messy data."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OpenSanctions", email = "info@opensanctions.org" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = ["babel >= 2.9.1", "normality >= 2.1.1", "pyyaml"]

[project.urls]
Homepage = "https://github.com/opensanctions/datapatch"

[project.optional-dependencies]
dev = [
    "mypy",
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
    "bump2version",
    "types-pyyaml",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["datapatch"]
